# var-model

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/var_model/: __init__.py  __main__.py  cli.py  config.py  divergence.py  risk.py  var.py
src/var_model/data/: __init__.py  database.py  fetch.py  pipeline.py  returns.py  schema.py
tests/: test_data.py  test_divergence.py  test_fetch.py  test_pipeline.py  test_returns.py  test_risk.py  test_smoke.py  test_var.py
