[project]
name = "var-model"
version = "0.1.0"
description = "Value-at-Risk and Expected Shortfall for an equity portfolio (historical, variance-covariance, Monte Carlo)."
readme = "README.md"
authors = [
    { name = "Tyson Kerr", email = "tysonmkerr@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "sqlalchemy>=2.0.51",
]

[project.scripts]
var-model = "var_model.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/var_model"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
ignore_missing_imports = true
warn_unused_ignores = true
